# yingyoujubenshengcheng

./: .dockerignore  .env.example  .gitignore  README.md  deploy.md  docker-compose.yml  render.yaml  requirements.txt  start_servers.bat  系统架构说明.txt
backend/: .gitignore  Dockerfile  config.py  database.py  docker-entrypoint.sh  main.py  migrate_db.py  pyproject.toml  pyrightconfig.json  requirements-postgres.txt  requirements.txt
backend/api/: ai.py  chapters.py  characters.py  export.py  foreshadows.py  knowledge.py  pipeline.py  projects.py  scenes.py  script_viz.py  search.py  templates.py  upload.py
backend/checkers/: commonsense_validator.py  conflict_evolution.py  cross_chapter_consistency.py  element_closure.py  ending_diversity.py  foreshadow_reachability.py  foreshadow_transition.py  genre_alignment.py  narrative_efficiency.py  relation_continuity.py  satisfaction_density.py  spatiotemporal.py  state_consistency.py  voice_consistency.py
backend/middleware/: __init__.py  audit_log.py  rate_limit.py
backend/migrations/: 001_first_round_infrastructure.sql  002_pipeline_state.sql  003_pipeline_layer.sql  004_character_dark_secret.sql  005_chapter_sections.sql  005_narrative_memory.sql  006_choice_designs.sql  007_foreshadow_relation_enhancements.sql
backend/models/: __init__.py  agent_task.py  audit.py  chapter.py  character.py  choice.py  element.py  emotion_curve.py  foreshadow.py  project.py  project_config.py  scene.py  types.py
backend/schemas/: agent.py  chapter.py  character.py  choice.py  foreshadow.py  project.py  scene.py
docs/: 极致优化白皮书.md
(+174 files in other folders)
